fixed padding on sticky footer to prevent overlapping

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -5,7 +5,7 @@ html {
 }
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 60px;
+  margin-bottom: 120px;
 }
 
 /* My Custom Written Styles */
